--- a/src/styles/beauty-Station.css
+++ b/src/styles/beauty-Station.css
@@ -380,6 +380,10 @@
         max-width: 240px;
     }
 
+    .icon {
+        height: 240px;
+    }
+
     .content {
         padding: 0 5%;
     }
